Removing --enable-preview and removing use of pattern match instanceof for now. IntelliJ IDEA 2022.1 doesn't seem to play well with it. Will re-enable when I move to JDK 18+.