@@ -114,7 +114,10 @@ public class ProjectCommand implements Runnable {
 					String.format("%d %%", percent)
 			);
 
-			if (child instanceof TaskGroup childGroup) {
+			if (child instanceof TaskGroup) {
+				// TODO Pattern matching instanceof (JDK 16+), had to remove --enable-preview for now
+				TaskGroup childGroup = (TaskGroup) child;
+
 				addTaskOutput(table, childGroup);
 			}
 		}
