@@ -54,8 +54,12 @@ public final class UpdateCommand implements Runnable {
 
 	private static void updateGroupFiles(Tasks tasks, TaskGroup group, OSInterface osInterface) {
 		for (TaskContainer child : group.getChildren()) {
-			if (child instanceof TaskGroup childGroup) {
+			if (child instanceof TaskGroup) {
+				// TODO Pattern matching instanceof (JDK 16+), had to remove --enable-preview for now
+				TaskGroup childGroup = (TaskGroup) child;
+
 				TaskGroupFileWriter writer = new TaskGroupFileWriter(childGroup, osInterface);
+
 				writer.write();
 
 				updateGroupFiles(tasks, childGroup, osInterface);
